# expokoi

./: .gitignore  HISTORY.md  LICENSE.md  README.md  pyproject.toml
expokoi/: __init__.py  core.py
expokoi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
herakoi/: __init__.py  core.py
